// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devices/components/moduleIdentityTwin snapshot matches snapshot after module twin is fetched 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": false,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Route
    component={[Function]}
  />
  <div
    className="module-identity-detail"
  >
    <div
      className="monaco-editor"
    >
      <Suspense
        fallback={
          <StyledSpinnerBase
            size={3}
            title="loading"
          />
        }
      >
        <ContextConsumer>
          <Component />
        </ContextConsumer>
      </Suspense>
    </div>
  </div>
</Fragment>
`;

exports[`devices/components/moduleIdentityTwin snapshot matches snapshot while loading 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.back",
          "iconProps": Object {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "moduleIdentity.detail.command.back",
          "onClick": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "ariaLabel": "moduleIdentity.detail.command.refresh",
          "disabled": true,
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.detail.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Route
    component={[Function]}
  />
  <div
    className="module-identity-detail"
  >
    <Component />
  </div>
</Fragment>
`;
